--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-  	"postinstall": "gulp",
+    "postinstall": "gulp",
     "start": "node ./bin/www"
   },
   "dependencies": {
@@ -16,6 +16,7 @@
     "bower-webpack-plugin": "^0.1.9",
     "compression": "^1.6.2",
     "cookie-parser": "~1.3.5",
+    "cors": "^2.8.1",
     "debug": "~2.2.0",
     "del": "^2.2.2",
     "express": "~4.13.1",
