--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-sass": "^3.0.0",
     "gulp-watch": "^4.3.11",
     "lodash": "^4.17.2",
+    "moment-timezone": "^0.5.11",
     "mongoose": "^4.7.2",
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.6.1",
