--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bower": "^1.8.0",
     "bower-webpack-plugin": "^0.1.9",
     "compression": "^1.6.2",
+    "connect-mongodb-session": "^1.3.0",
     "cookie-parser": "~1.3.5",
     "cors": "^2.8.1",
     "debug": "~2.2.0",
