--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bower": "^1.8.0",
     "bower-webpack-plugin": "^0.1.9",
     "compression": "^1.6.2",
+    "connect-mongo": "^2.0.0",
     "connect-mongodb-session": "^1.3.0",
     "cookie-parser": "~1.3.5",
     "cors": "^2.8.1",
@@ -30,6 +31,7 @@
     "gulp-watch": "^4.3.11",
     "lodash": "^4.17.2",
     "moment-timezone": "^0.5.11",
+    "mongodb-autoincrement": "^1.0.1",
     "mongoose": "^4.7.2",
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.6.1",
@@ -44,6 +46,6 @@
     "webpack-stream": "^3.2.0"
   },
   "engines": {
-    "node": "^7.10.1"
+    "node": "^8.0.0"
   }
 }
